<resources>
    <string name="app_name">GPA Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear All</string>
    <string name="action_feedback">Report Bug/ Feedback</string>
    <string name="action_help">Help</string>
    <string name="title_activity_alph">AlphActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="mainTextView_empty"></string>
    <string name="normalText">Normal</string>
    <string name="hoursText">Hours</string>
    <string name="scaleText">Scale</string>
    <string-array name="weight_spinner_values">
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>
    <string-array name="scale_spinner_values">
        <item>4.0</item>
        <item>4.3</item>
        <item>5.0</item>
    </string-array>
    <string-array name="start_spinner_values">
        <item>Normal</item>
        <item>Current GPA</item>
    </string-array>
    <string name="title_activity_tutor">TutorActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_constrained">ConstrainedActivity</string>

    <!--button text resources-->
    <string name="button_start">Start</string>
    <string name="button_credit">Credit Hours</string>
    <string name="button_scale">Scale</string>
    <string name="button_clear">CLR</string>
    <string name="button_alph">ABC</string>
    <string name="button_plus">+</string>
    <string name="button_done">Done</string>
    <string name="button_next">Next</string>
    <string name="button_dot">.</string>

    <!--button numbers-->
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>

    <!--button letters-->

    <string name="button_AP">A+</string>
    <string name="button_A">A</string>
    <string name="button_AM">A-</string>
    <string name="button_BP">B+</string>
    <string name="button_B">B</string>
    <string name="button_BM">B-</string>
    <string name="button_CP">C+</string>
    <string name="button_C">C</string>
    <string name="button_CM">C-</string>
    <string name="button_DP">D+</string>
    <string name="button_D">D</string>
    <string name="button_DM">D-</string>
    <string name="button_EF">E/F</string>
    <string name="button_F">F</string>

</resources>
