<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3a3a3a"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="thecollegenotebook.com.gpacalculator.MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#272727"
        android:maxLength="11"
        android:maxLines="1"
        android:textAlignment="gravity"
        android:textColor="@color/colorTextWhite"
        android:textSize="50sp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:gravity="center|end"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonStart"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onStartClickListener"
        android:text="@string/button_start"
        android:textColor="@color/colorTextYellow"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginTop="24dp" />


    <Button
        android:id="@+id/buttonScale"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickScaleListener"
        android:text="@string/button_scale"
        android:textColor="@color/colorTextGreen"
        app:layout_constraintTop_toTopOf="@+id/buttonStart"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonStart" />

    <Button
        android:id="@+id/buttonWeight"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickWeightListener"
        android:text="@string/button_credit"
        android:textColor="@color/colorTextTang"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/buttonScale"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonScale" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonWeight"
        app:layout_constraintVertical_bias="0.22000003">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="74dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <Button
                android:id="@+id/button7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="0dp"
                android:minWidth="0dip"
                android:onClick="numberClickHandler"
                android:text="@string/button_7"
                android:textColor="@color/colorTextWhite"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/button8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:onClick="numberClickHandler"
                android:text="@string/button_8"
                android:textColor="@color/colorTextWhite"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="37dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/button9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:onClick="numberClickHandler"
                android:text="@string/button_9"
                android:textColor="@color/colorTextWhite"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="74dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/buttonClear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:onClick="clearClickHandler"
                android:text="@string/button_clear"
                android:textColor="@color/colorTextWhite"
                tools:layout_editor_absoluteX="112dp"
                tools:layout_editor_absoluteY="9dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="74dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="73dp">

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:onClick="numberClickHandler"
                android:text="@string/button_4"
                android:textColor="@color/colorTextWhite"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:onClick="numberClickHandler"
                android:text="@string/button_5"
                android:textColor="@color/colorTextWhite"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="37dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/button6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:onClick="numberClickHandler"
                android:text="@string/button_6"
                android:textColor="@color/colorTextWhite"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="74dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/buttonAlph"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:onClick="abcClickHandler"
                android:text="@string/button_alph"
                android:textColor="@color/colorTextWhite"
                tools:layout_editor_absoluteX="112dp"
                tools:layout_editor_absoluteY="9dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="74dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="147dp">

            <Button
                android:id="@+id/button1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:onClick="numberClickHandler"
                android:text="@string/button_1"
                android:textColor="@color/colorTextWhite"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:onClick="numberClickHandler"
                android:text="@string/button_2"
                android:textColor="@color/colorTextWhite"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="37dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:onClick="numberClickHandler"
                android:text="@string/button_3"
                android:textColor="@color/colorTextWhite"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="74dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/buttonAdd"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:onClick="addClickHandler"
                android:text="@string/button_plus"
                android:textColor="@color/colorTextWhite"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="112dp"
                tools:layout_editor_absoluteY="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="74dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="221dp">

            <Button
                android:id="@+id/buttonDot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:onClick="numberClickHandler"
                android:text="@string/button_dot"
                android:textColor="@color/colorTextWhite"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/button0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:onClick="numberClickHandler"
                android:text="@string/button_0"
                android:textColor="@color/colorTextWhite"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/buttonDone"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:layout_weight="2"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:onClick="doneClickHandler"
                android:text="@string/button_done"
                android:textColor="@color/colorTextWhite"
                tools:layout_editor_absoluteX="67dp"
                tools:layout_editor_absoluteY="9dp" />

        </TableRow>
    </TableLayout>


    <TextView
        android:id="@+id/textViewStartMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normalText"
        android:textColor="@color/colorTextYellow"
        app:layout_constraintRight_toRightOf="@+id/textView"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/hoursText"
        android:textColor="@color/colorTextTang"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <Spinner
        android:id="@+id/number_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"

        android:clickable="false"
        android:gravity="center"
        android:spinnerMode="dialog"
        android:textAlignment="gravity"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="@+id/textView2" />
    <!--android:backgroundTint="#00ffffff"-->
    <!--android:contextClickable="false"-->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/scaleText"
        android:textColor="@color/colorTextGreen"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintBottom_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/scale_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"

        android:clickable="false"

        android:gravity="center"
        android:spinnerMode="dialog"
        android:textAlignment="gravity"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="@+id/textView3" />

    <!--android:backgroundTint="#00ffffff"-->
    <!--android:contextClickable="false"-->


    <Spinner
        android:id="@+id/start_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"

        android:clickable="false"

        android:gravity="center"
        android:spinnerMode="dialog"
        android:textAlignment="gravity"
        android:visibility="invisible"
        app:layout_constraintLeft_toRightOf="@+id/buttonStart"
        app:layout_constraintTop_toTopOf="@+id/buttonStart"
        app:layout_constraintBottom_toBottomOf="@+id/buttonStart" />

    <!--android:backgroundTint="#00ffffff"-->
    <!--android:contextClickable="false"-->


</android.support.constraint.ConstraintLayout>
